r97 - september, 11, 2009
    * cotisation : _form.php > fixes bug #22 (AJAX behaviour when installation
      without virtualhost)
    

r96 - september, 11, 2009
    * /web/index.php : exception message if error occured
    * /apps/front/config/error/error.html.php : new file. Custom exception page
    * cotisationtype : actions > edit > fixed bug > test if we are allowed to
      edit the entry
    * updates/1.1.0beta2-to-1.1 : r96.sql > Changing years of validity by months
      of validity
    * /lib/misc/DateTools.class.php : new class file
    * Membre.php : isAjourCotisation() is up to date
    * cotisationtype : _form.php > label of field 'validity' is up to date (year
      is now months)
    

r95 - august, 14, 2009
	* test_data.yml : reference to object 'private_user' have been updated
	* associationActionsTest.php : refactored code and 1 test has been commented
	  to allow tests to be launched more than one time


r94 - august, 14, 2009
	* piwam-install.sql : error in constraint name 'acl_action_FK_1' has been
	  fixed
	* /data/updates/1.1.0beta-to-1.1/r92.sql : error in constraint name 
	  'acl_action_FK_1' has been fixed


r93 - august, 14, 2009
	* piwam-install.sql : explicit DB names have been removed
	* /data/updates/1.1.0beta-to-1.1/*.sql : explicit DB names have been removed
	

r92 - august, 3, 2009
	* /data/updates/1.1.0beta-to-1.1/r92.sql : CASCADE behaviour added for some
	  tables
	* piwam-install.sql is up to date
	* test_data.yml : new fixtures for 'Activite' table
	* test_data.yml : fixtures for 'Compte' table are set as enabled
	* test_data.yml : fixtures for a second private association
	* recetteActionsTest.php : tests implemented
	

r91 - august, 3, 2009
	* Edited wiki page through web user interface.
	

r90 - august, 3, 2009
	* Edited wiki page through web user interface
	

r89 - august, 2, 2009
	* test_data.yml : fixtures for all the tables
	* piwam-install.sql is up to date